--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "youtube-telegram-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Smart YouTube to Telegram Bot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node index.js"
   },
-  "keywords": [],
+  "keywords": ["telegram", "youtube", "bot"],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
-    "@distube/ytdl-core": "^4.16.12",
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@distube/ytdl-core": "^6.12.5",
     "dotenv": "^17.2.4",
-    "fluent-ffmpeg": "^2.1.3",
     "telegraf": "^4.16.3"
+  },
+  "devDependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "fluent-ffmpeg": "^2.1.3"
   }
 }
